--- a/.travis.yml
+++ b/.travis.yml
@@ -36,3 +36,7 @@ before_script:
   - adb shell input keyevent 82 &
 
 script: mvn clean install -Dandroid.device=test -P it
+
+
+notifications:
+  email: false
